# chord-explorer

./: .gitignore  Cargo.toml  flake.nix
src/: explorer.rs  font.rs  main.rs  widget.rs
