[package]
name = "chord-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
error-iter = "0.4.1"
log = "0.4.20"
pixels = "0.13.0"
tap = "1.0.1"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
winit_input_helper = "0.15.1"
